Fix for bug #1477, incorrect property 'align'.  Thanks Jeff!

--- a/src/web/web/css/styles.css
+++ b/src/web/web/css/styles.css
@@ -485,7 +485,7 @@ div.spacer
 
 div.center
 {
-        align: center;
+        text-align: center;
 }
 
 #headerlogo
